Remove onClick from checkbox (was not necessary), and update snapshots again

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -142,7 +142,7 @@ allows us to embed a link into the checkbox label.
     }
     return (
       <>
-        <Checkbox checked={checked} onClick={setChecked}>
+        <Checkbox checked={checked} onChange={setChecked}>
           <Text>
             I agree to the
             <a
