--- a/packages/components/src/RecurringSelect/RecurringSelect.mdx
+++ b/packages/components/src/RecurringSelect/RecurringSelect.mdx
@@ -14,7 +14,7 @@ import { Checkbox } from "@jobber/components/Checkbox";
 import { Divider } from "@jobber/components/Divider";
 import { Avatar } from "@jobber/components/Avatar";
 import { useState } from "react";
-import { DurationPeriod, SchedulerState } from "./types";
+import { DurationPeriod } from "./types";
 
 # RecurringSelect
 
@@ -37,31 +37,33 @@ import { RecurringSelect } from "@jobber/components/RecurringSelect";
 <Playground>
   {() => {
     const [rule, setRule] = useState({ interval: 1, type: DurationPeriod.Day });
-    
-    return(
+    return (
       <RecurringSelect
         recurrenceRule={rule}
         disabled={false}
         onChange={setRule}
-      />);
-    }}
-
+      />
+    );
+  }}
 </Playground>
 
 ## Monthly with some selections & disabled example
 
 <Playground>
   {() => {
-    const [rule, setRule] = useState({ interval: 1, type: DurationPeriod.DayOfMonth, date: new Set([2, 4, 6, 10, 12, 18, 25, "LAST"]) });
-
-    return(
+    const [rule, setRule] = useState({
+      interval: 1,
+      type: DurationPeriod.DayOfMonth,
+      date: new Set([2, 4, 6, 10, 12, 18, 25, "LAST"]),
+    });
+    return (
       <RecurringSelect
         recurrenceRule={rule}
         disabled={true}
         onChange={setRule}
-      />);
-    }}
-
+      />
+    );
+  }}
 </Playground>
 
 ## Props
