Add fixes suggested in PR review: labelText variable, add a test, and allow tab to reach the child link in the checkbox label

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -150,6 +150,7 @@ allows us to embed a link into the checkbox label.
                 color: "var(--color-interactive)",
                 textDecoration: "underline",
               }}
+              tabindex="0"
               onClick={handleOpenModal}
             >
               terms of service
