--- a/packages/components/src/RecurringSelect/RecurringSelect.mdx
+++ b/packages/components/src/RecurringSelect/RecurringSelect.mdx
@@ -37,13 +37,7 @@ import { RecurringSelect } from "@jobber/components/RecurringSelect";
 <Playground>
   {() => {
     const [rule, setRule] = useState({ interval: 1, type: DurationPeriod.Day });
-    return (
-      <RecurringSelect
-        recurrenceRule={rule}
-        disabled={false}
-        onChange={setRule}
-      />
-    );
+    return <RecurringSelect value={rule} disabled={false} onChange={setRule} />;
   }}
 </Playground>
 
@@ -56,13 +50,7 @@ import { RecurringSelect } from "@jobber/components/RecurringSelect";
       type: DurationPeriod.DayOfMonth,
       date: new Set([2, 4, 6, 10, 12, 18, 25, "LAST"]),
     });
-    return (
-      <RecurringSelect
-        recurrenceRule={rule}
-        disabled={true}
-        onChange={setRule}
-      />
-    );
+    return <RecurringSelect value={rule} disabled={true} onChange={setRule} />;
   }}
 </Playground>
 
