remove arrows so that we aren't lying
Co-authored-by: Zak <ZakaryH@users.noreply.github.com>

--- a/packages/components/src/RecurringSelect/RecurringSelect.mdx
+++ b/packages/components/src/RecurringSelect/RecurringSelect.mdx
@@ -76,7 +76,7 @@ encounters a disabled state, so only use this approach if a disabled state canno
 
 The `RecurringSelect` component is entirely usable by keyboard.
 
-All selections can be done and undone with tabs, arrows and the space bar. The "visual" 
+All selections can be done and undone with tabs and the space bar. The "visual" 
 calendar-style selectors are all built using radio or checkbox elements where necessary,
 ensuring that users of assistive tech have appropriate context as to the type of
 selection they are making.
