--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -305,6 +305,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="presentation" /> | `presentation` |
 | <Icon name="quickbooks" />   | `quickbooks`   |
 | <Icon name="reports" />      | `reports`      |
+| <Icon name="signature" />    | `signature`    |
 | <Icon name="starburst" />    | `starburst`    |
 | <Icon name="sun" />          | `sun`          |
 | <Icon name="thumbsUp" />     | `thumbsUp`     |
