--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -128,4 +128,5 @@ If using a custom activator, ensure that the activator is keyboard-operable.
 
 ## Notes
 
-As mentioned above, the Datepicker wraps [React DatePicker](https://reactdatepicker.com/).
+As mentioned above, the Datepicker wraps
+[React DatePicker](https://reactdatepicker.com/).
