--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -22,8 +22,7 @@ import { InputValidation } from ".";
   <a href="/components/input-text/#validation-message">
     input component's validation
   </a>
-  . Check that you cannot use the built-in validation before using this
-  component.
+  . Check that you cannot use the built-in validation before using this component.
 </Banner>
 
 `InputValidation` allows you to show the validation messages in cases where an
