--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -56,15 +56,15 @@ When contributing to or consuming the Toast component, consider the following:
 For more persistent feedback (such as displaying errors), communicating a
 background process that is ongoing, or for feedback that has a longer reading
 length or CTA, use [Banner.](banner)
-  
+
 ### Errors
 
-> Do not use Toast for errors. This is currently an available variation, but should
-> be considered deprecated and not propagated.
+> Do not use Toast for errors. This is currently an available variation, but
+> should be considered deprecated and not propagated.
 
-Use [Banner](banner) and, where necessary, targeted error messaging
-(such as [InputValidation](input-validation)) so that the user can appropriately assess and
-recover from the error.
+Use [Banner](banner) and, where necessary, targeted error messaging (such as
+[InputValidation](input-validation)) so that the user can appropriately assess
+and recover from the error.
 
 ## Props
 
@@ -73,9 +73,9 @@ recover from the error.
 ## Variations
 
 The primary use case for Toast is success messages.
-  
-In some cases, an informational Toast may be used to
-inform the user of some background system activity.
+
+In some cases, an informational Toast may be used to inform the user of some
+background system activity.
 
 <Playground>
   {() => {
