--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -151,7 +151,7 @@ which they can also remove once added.
         onChange={handleSelect}
         onCustomAdd={handleCustomAdd}
         isLoadingMore={loading}
-        onSearch={handleSearch} // TODO: merge search and load more into one callback
+        onSearch={handleSearch}
         onLoadMore={handleLoadMore}
       >
         {options.map(name => (
