feat(components): Support dismissible type on Chips (#847)
* first pass on a chip group dismissible

* hack the menu to show an autocomplete

* delete last chip on backspace

* add a way to search and select from a list of options

* temporary playground test

Update Chips.mdx

* create a hook to manage logic

* ensure active element is always visible on screen

* add another hook and code cleanup

* hide avatar from VO

remve aria-relevant

* allow activator to be replaced

* clean up file structure

* first pass on searchMore and loadMore

* bring back only component to root

* add prop for loading indicator

* add proper example in playground

* arrow keys UX tweak

* reset on menu close

* add test for chip dismissible and input

* code cleanuo

* fix circular dependency and debounce search

* reposition menu depending on available space

* add test for useInternalChipDismissible hook

* rename input hook to useInternalChipDismissibleInput

* first pass on useInternalChipDismissibleInput hook test

* add more test for useInternalChipDismissibleInput

* remove hover css and allow comma to add what you typed

* slightly tweak the debounce

* spelling and bees

--- a/packages/components/src/Chips/Chips.mdx
+++ b/packages/components/src/Chips/Chips.mdx
@@ -8,6 +8,7 @@ showDirectoryLink: true
 import { Playground, Props } from "docz";
 import { useState } from "react";
 import { Chip, Chips, ChipDismissible } from ".";
+import { useFakeOptionQuery } from "./utils/mdxUtils.ts";
 import { Avatar } from "@jobber/components/Avatar";
 import { Content } from "@jobber/components/Content";
 import { Disclosure } from "@jobber/components/Disclosure";
@@ -118,45 +119,47 @@ user, leaving all selections blank.
   }}
 </Playground>
 
-<!-- TODO: Uncomment once dismissible is implemented -->
-
-<!-- ### Add/dismiss selection
+### Add/dismiss selection
 
 When the user will be selecting one or more items by inputting their own Chip
 options with, use the dismissible Chip.
 
-The dismissible Chip allows them to remove previous
-selections from the Chips. Use this option when the full list of possible
-selections is too great to reasonably display in one group of Chip. For example,
-"all of my phone contacts" would be far too many Chip options to present in one
-group, and would be overwhelming for the user to interpret.
+The dismissible Chip allows them to remove previous selections from the Chips.
+Use this option when the full list of possible selections is too great to
+reasonably display in one group of Chip. For example, "all of my phone contacts"
+would be far too many Chip options to present in one group, and would be
+overwhelming for the user to interpret.
 
 This format also allows the user to create their own "freeform" Chip options,
 which they can also remove once added.
 
- -->
-
-### Dismissible Chip
-
-A standalone chip that gives you an action to remove it from a list.
-
-```ts
-import { ChipDismissible } from "@jobber/components/Chips";
-```
-
 <Playground>
-  <ChipDismissible
-    prefix={<Avatar initials="MB" />}
-    label="Mercedes-Benz"
-    onClick={() => alert("chip")}
-    onRequestRemove={() => alert("remove")}
-  />{" "}
-  <ChipDismissible
-    prefix={<Icon name="engine" color="yellow" />}
-    label="Check engine light"
-    onRequestRemove={() => alert("remove")}
-  />{" "}
-  <ChipDismissible label="Black" onRequestRemove={() => alert("remove")} />
+  {() => {
+    const {
+      selected,
+      options,
+      loading,
+      handleLoadMore,
+      handleSearch,
+      handleSelect,
+      handleCustomAdd,
+    } = useFakeOptionQuery();
+    return (
+      <Chips
+        type="dismissible"
+        selected={selected}
+        onChange={handleSelect}
+        onCustomAdd={handleCustomAdd}
+        isLoadingMore={loading}
+        onSearch={handleSearch}
+        onLoadMore={handleLoadMore}
+      >
+        {options.map(name => (
+          <Chip key={name} label={name} value={name} />
+        ))}
+      </Chips>
+    );
+  }}
 </Playground>
 
 ## Props of Chips
@@ -166,10 +169,6 @@ import { ChipDismissible } from "@jobber/components/Chips";
 ## Props of Chip
 
 <Props of={Chip} />
-
-## Props of ChipDismissible
-
-<Props of={ChipDismissible} />
 
 ## Content Guidelines
 
