change use to user

--- a/packages/hooks/src/useLiveAnnounce/useLiveAnnounce.mdx
+++ b/packages/hooks/src/useLiveAnnounce/useLiveAnnounce.mdx
@@ -10,7 +10,7 @@ import { Button } from "@jobber/components/Button";
 
 # useLiveAnnounce
 
-Announce a message through the screen reader whenever a use does an action like
+Announce a message through the screen reader whenever a user does an action like
 deletion or addition.
 
 ```ts
