docs(DatePicker): change section title to Restricting date ranges

--- a/packages/components/src/DatePicker/DatePicker.mdx
+++ b/packages/components/src/DatePicker/DatePicker.mdx
@@ -99,10 +99,10 @@ pass a `React` component as the `activator`.
   }}
 </Playground>
 
-## Disabling dates
+## Restricting date ranges
 
-If you want to enable for selection only for a set of dates you can pass
-`minDate` or `maxDate` to the component as props.
+If you want to enable for selection only a range of dates you can pass `minDate`
+or `maxDate` to the component as props.
 
 <Playground>
   {() => {
