add new icon to docs usage

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -281,6 +281,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="search" />    | `search`    |
 | <Icon name="sort" />      | `sort`      |
 | <Icon name="sync" />      | `sync`      |
+| <Icon name="filter" />    | `filter`    |
 
 ### Other
 
