add docs for two other icons

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -124,17 +124,19 @@ import { Icon } from "@jobber/components/Icon";
 
 ### Files
 
-| Icon                    | `Name`    |
-| :---------------------- | :-------- |
-| <Icon name="addNote" /> | `addNote` |
-| <Icon name="archive" /> | `archive` |
-| <Icon name="excel" />   | `excel`   |
-| <Icon name="file" />    | `file`    |
-| <Icon name="note" />    | `note`    |
-| <Icon name="pdf" />     | `pdf`     |
-| <Icon name="video" />   | `video`   |
-| <Icon name="word" />    | `word`    |
-| <Icon name="upload" />  | `upload`  |
+| Icon                      | `Name`      |
+| :------------------------ | :---------- |
+| <Icon name="addNote" />   | `addNote`   |
+| <Icon name="archive" />   | `archive`   |
+| <Icon name="excel" />     | `excel`     |
+| <Icon name="file" />      | `file`      |
+| <Icon name="note" />      | `note`      |
+| <Icon name="pdf" />       | `pdf`       |
+| <Icon name="video" />     | `video`     |
+| <Icon name="word" />      | `word`      |
+| <Icon name="upload" />    | `upload`    |
+| <Icon name="image" />     | `image`     |
+| <Icon name="paperclip" /> | `paperclip` |
 
 ### Forms
 
