--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -52,7 +52,7 @@ Use this to allow users to provide short answers.
 ## Multiline
 
 Use this to allow users to provide long answers. The default number of rows is
-three.
+three. Note that `loading={true}` is unimplemented for multiline input text.
 
 <Playground>
   <InputText
@@ -281,7 +281,8 @@ Determine what default keyboard appears on mobile web.
 
 ## Loading
 
-Add a loading state to content.
+Add a loading state to content. Note that `loading={true}` is unimplemented
+for multiline input text, i.e., when `multiline={true}`.
 
 <Playground>
   <InputText
