--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -19,12 +19,9 @@ Icons are used to visually communicate core parts of the product and available
 actions. They can act as wayfinding tools to more easily understand where they
 are in the product, and common interaction patterns that are available.
 
-It’s a good idea to use these built-in icons as much as possible because they're
-familiar to people.
-
-Use icons as intended. Provided icons have a specific, meaning. To avoid
-confusing users, it’s essential that each image be used in accordance with its
-meaning and recommended usage.
+Use icons as intended. Provided icons have a specific meaning. To avoid
+confusing users, each icon should be used in accordance with its meaning and
+recommended usage.
 
 ## Design Guidelines
 
