changes made to FormatFile to allow thumbnail variation

--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -50,6 +50,18 @@ import { FormatFile } from "@jobber/components/FormatFile";
         size: 2134023,
         progress: 1,
       }}
+      displaySize="large"
+      display="thumbnail"
+      onDelete={() => alert("🧨BALEETED!💥")}
+    />
+    <FormatFile
+      file={{
+        key: "mosdef",
+        name: "tps_report.png",
+        type: "application/pdf",
+        size: 2134023,
+        progress: 1,
+      }}
       onDelete={() => alert("🧨BALEETED!💥")}
     />
   </Content>
