--- a/docs/content/product-vocabulary.mdx
+++ b/docs/content/product-vocabulary.mdx
@@ -561,3 +561,13 @@ on using "valid".
 | Enter a valid expiration year | The expiration year is invalid, please try again |
 
 <br />
+
+## Symbols and Punctuation
+
+### Multiplication
+
+Use the `×` symbol to indicate multiplication whenever possible, rather than an `x`.
+
+| **✅ Do**     | **❌ Don't** |
+| ------------- | ----------- |
+| 12 × $48.00   | 12 x $48.00 |
