apply thumbnail style specific to displaySize

--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -31,6 +31,18 @@ import { FormatFile } from "@jobber/components/FormatFile";
   <Content>
     <FormatFile
       file={{
+        key: "abc",
+        name: "myballisbigandroundIamrollingitontheground.png",
+        type: "image/png",
+        size: 213402324,
+        progress: 0.4,
+        src: () => Promise.resolve("https://source.unsplash.com/250x250"),
+      }}
+      display="thumbnail"
+      onDelete={() => alert("🧨BALEETED!💥")}
+    />
+    <FormatFile
+      file={{
         key: "mosdef",
         name: "tps_report.png",
         type: "application/pdf",
@@ -73,11 +85,25 @@ uploaded by the SP
         name: "myballisbigandroundIamrollingitontheground.png",
         type: "image/png",
         size: 213402324,
+        progress: 0.5,
+        src: () => Promise.resolve("https://source.unsplash.com/250x250"),
+      }}
+      displaySize="large"
+      display="thumbnail"
+      onDelete={() => alert("🧨BALEETED!💥")}
+    />
+    <FormatFile
+      file={{
+        key: "abc",
+        name: "myballisbigandroundIamrollingitontheground.png",
+        type: "image/png",
+        size: 213402324,
         progress: 1,
         src: () => Promise.resolve("https://source.unsplash.com/250x250"),
       }}
       displaySize="large"
       display="thumbnail"
+      onDelete={() => alert("🧨BALEETED!💥")}
     />
   </Content>
 </Playground>
