--- a/packages/components/src/Gallery/Gallery.mdx
+++ b/packages/components/src/Gallery/Gallery.mdx
@@ -118,6 +118,9 @@ size isn't explicitly set, and can also set the size to "large"
         size: 213402324,
         progress: 1,
         src: "https://source.unsplash.com/250x250",
+        onDelete: () => {
+          alert("DELETED!");
+        },
       },
       {
         key: "def",
